--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 test/__pycache__/conftest.cpython-37-pytest-7.4.0.pyc
 test/__pycache__/unemployment_test.cpython-37-pytest-7.4.0.pyc
+test/__pycache__/conftest.cpython-311-pytest-7.3.1.pyc
+test/__pycache__/conftest.cpython-311-pytest-7.3.1.pyc
