--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ test/__pycache__/unemployment_test.cpython-311-pytest-7.3.1.pyc
 test/__pycache__/conftest.cpython-311-pytest-7.3.1.pyc
 test/__pycache__/conftest.cpython-310-pytest-7.4.0.pyc
 test/__pycache__/unemployment_test.cpython-310-pytest-7.4.0.pyc
+__pycache__/__init__.cpython-311.pyc
+__pycache__/__init__.cpython-311.pyc
+__pycache__/__init__.cpython-311.pyc
+__pycache__/__init__.cpython-311.pyc
