--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ __pycache__/__init__.cpython-311.pyc
 __pycache__/__init__.cpython-311.pyc
 __pycache__/__init__.cpython-311.pyc
 __pycache__/__init__.cpython-311.pyc
+__pycache__/__init__.cpython-311.pyc
